idea/testData/multiModuleLineMarker/fromActualCompanion/jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>WithCompanion<!> {
    actual companion <!LINE_MARKER("descr='Has declaration in common module'")!>object<!> {

    }
}